@@ -2,6 +2,13 @@
 
 	* mpz/setbit.c: Simplify.
 
+	* gmp-impl.h (LOG2C): Define.
+	* mpz/fac_ui.c (LOG2C): Remove.
+	* mpz/2fac_ui.c (LOG2C): Remove.
+	* mpz/oddfac_1.c (LOG2C): Remove.
+	* mpn/generic/binvert.c (LOG2C): Remove.
+	* mpn/generic/invertappr.c (LOG2C): Remove.
+
 2012-04-19  Torbjorn Granlund  <tege@gmplib.org>
 
 	* tests/mpz/Makefile.am (check_PROGRAMS): Add t-remove.
